--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "ES6",
+    "module": "commonjs",
     "declaration": true,
     "outDir": "./lib",
-    "strict": true,
-    "moduleResolution": "Node",
+    "strict": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
