--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-mail-receiver",
-  "version": "1.0.6",
+  "version": "1.0.11",
   "description": "IMAP simple mail receiver",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -14,6 +14,7 @@
     "@types/imap": "^0.8.35",
     "@types/mailparser": "^3.4.0",
     "@types/node": "^16.9.6",
+    "typed-emitter": "^2.1.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
