--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-mail-receiver",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "IMAP simple mail receiver",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -12,7 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/imap": "^0.8.35",
-    "@types/mailparser": "^3.4.0",
+    "@types/mailparser": "^3.4.4",
     "@types/node": "^16.9.6",
     "typescript": "^3.8.3"
   },
@@ -28,7 +28,7 @@
   ],
   "dependencies": {
     "imap": "^0.8.19",
-    "mailparser": "^2.2.0"
+    "mailparser": "3.6.5"
   },
   "repository": {
     "type": "git",
